Add admin, fixture sync, and contest backend updates